unpackaged/main/default/objects/ia_crm__Sales_Invoice_Item__c/ia_crm__Sales_Invoice_Item__c.object-meta.xml
<CustomObject>
    <description>Line items for Sales Invoice document.</description>
    <label>Sales Invoice Item</label>
    <nameField>
        <label>Line No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Invoice Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>