unpackaged/main/default/objects/ia_crm__Sales_Invoice_Item__c/fields/ia_crm__Classes__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Classes__c</fullName>
    <label>Class</label>
    <length>80</length>
    <type>Text</type>
</CustomField>