unpackaged/main/default/objects/ia_crm__Sales_Invoice_Item__c/fields/ia_crm__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales Invoice Items</relationshipLabel>
    <relationshipName>R00N40000001bdnzEAA</relationshipName>
    <type>Lookup</type>
</CustomField>