unpackaged/main/default/objects/ia_crm__Sales_Invoice_Item__c/fields/ia_crm__Sales_Invoice__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Sales_Invoice__c</fullName>
    <label>Sales Invoice</label>
    <referenceTo>ia_crm__Sales_Invoice__c</referenceTo>
    <relationshipLabel>Sales Invoice Items</relationshipLabel>
    <relationshipName>R00N40000001p914EAA</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>