unpackaged/main/default/objects/ia_crm__Sales_Invoice_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ia_crm__Contract__c</columns>
    <columns>ia_crm__Item__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>